--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <div class="container-logo"> <img src="./assets/img/fis.svg" class="company-logo" alt=""> </div>
                 <div class="company-description">
                     <p>
-                        FIS is the CDMO leader in Europe for small molecule: a reliable, long-term partner with an integrated contract manufacturing organization able to manage smallmolecule API and Intermediate projects from DEVELOPMENT to COMMERCIAL production.
+                        FIS is the CDMO leader in Europe for small molecule: a reliable, long-term partner with an integrated contract manufacturing organization able to manage small molecule API and Intermediate projects from DEVELOPMENT to COMMERCIAL production.
                     </p>
                 </div>
                 <div class="flex">
-                    <div class="button">Visit Website</div>
+                    <a href="http://www.fisvi.com" class="button">Visit Website</a>
                 </div>
             </div>
             <div class="col-lg-2 col-xs-12 column">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="flex">
-                    <div class="button">Visit Website</div>
+                    <a href="http://delmarchem.com" class="button">Visit Website</a>
                 </div>
             </div>
             <div class="col-lg-2 col-xs-12 column">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="flex">
-                    <div class="button">Visit Website</div>
+                    <a href="https://www.anemocyte.com" class="button">Visit Website</a>
                 </div>
             </div>
             <div class="col-lg-2 col-xs-12 column">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="flex">
-                    <div class="button">Visit Website</div>
+                    <a href="http://www.phfsa.com" class="button">Visit Website</a>
                 </div>
             </div>
             <div class="col-lg-2 col-xs-12 column">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="flex">
-                    <div class="button">Visit Website</div>
+                    <!-- <a href="http://brentapharm.com" class="button">Visit Website</a> -->
                 </div>
             </div>
         </div>
