modified image and link direction

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             <div class="col-lg-2 col-xs-12 column">
                 <div class="div">
                     <div class="mini"></div>
-                    <div class="container-logo"> <img src="./assets/img/bp.svg" class="company-logo" alt=""> </div>
+                    <div class="container-logo"> <img src="./assets/img/Logo_brenta_blu.svg" class="company-logo" alt=""> </div>
                     <div class="company-description">
                         <p> Brenta is a research driven, technology platforms developer on pharmaceutical and material science fields. </p>
                     </div>
                 </div>
                 <div class="flex">
-                    <!-- <a href="http://brentapharm.com" class="button">Visit Website</a> -->
+                    <a href="http://www.brenta.net" class="button">Visit Website</a>
                 </div>
             </div>
         </div>
